--- a/client/scss/layout/_forms.scss
+++ b/client/scss/layout/_forms.scss
@@ -1359,7 +1359,7 @@ input[type="radio"].radio--large + label {
     background: transparent;
 
     @media #{$medium-up} {
-      width: rem-calc(48px);
+      width: rem-calc(60px);
     }
   }
 
@@ -1373,7 +1373,7 @@ input[type="radio"].radio--large + label {
     position: relative;
 
     @media #{$medium-up} {
-      width: rem-calc(48px);
+      width: rem-calc(60px);
     }
 
   }
@@ -1386,9 +1386,10 @@ input[type="radio"].radio--large + label {
     background: transparent;
     -webkit-appearance: none;
     top: rem-calc(-3px);
+    left: rem-calc(2px);
     position: relative;
     @media #{$medium-up} {
-      width: rem-calc(48px);
+      width: rem-calc(60px);
     }
   }
 
